--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             .navbar-brand {
                 display: none;
             }
+
+            .end-text {
+                display: block;
+                text-align: center;
+                justify-content: center;
+            }
         }
 
         .crs {
@@ -57,9 +63,9 @@
                     <li><a href="indexloja.html" class="nav-link px-2 text-white">Loja Física</a></li>
                 </ul>
 
-                <div class="text-end">
+                <div class="end-text">
                     <a href="indexlogini.html"><button type="button"
-                            class="btn btn-outline-light me-2">Cadastre-se</button></a>
+                            class="btn btn-outline-light me-2 m-2">Cadastre-se</button></a>
                     <a href="indexcontafin.html"><button type="button" class="btn btn-outline-light">Já Possuo
                             Conta</button></a>
                 </div>
